BGDIINF_SB-2517: Set default cache-control header within pyramid application
Do not set anymore the default cache-control within Apache but directly
within the application. The final goal is to remove as much as possible logic
from Apache.

--- a/.env.ci
+++ b/.env.ci
@@ -4,6 +4,7 @@ PY_ROOT_LOG_LEVEL=DEBUG
 PY_CHSDI_LOG_LEVEL=DEBUG
 PY_SQLALCHEMY_LOG_LEVEL=WARN
 API_URL=//sys-api3.dev.bgdi.ch
+CACHE_CONTROL="max-age=10,public"
 DATAGEOADMINHOST=sys-data.dev.bgdi.ch
 DYNAMIC_TRANSLATION=1
 GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
