--- a/production.ini.in
+++ b/production.ini.in
@@ -59,6 +59,7 @@ datageoadminhost = ${datageoadminhost}
 opentrans_api_key = ${opentrans_api_key}
 empty_geotables = ch.bav.sachplan-infrastruktur-schifffahrt_anhoerung,ch.bfe.sachplan-uebertragungsleitungen_anhoerung,ch.blw.emapis-bewaesserung,ch.blw.emapis-elektrizitaetsversorgung,ch.blw.emapis-milchleitung,ch.blw.emapis-seilbahnen,ch.vbs.sachplan-infrastruktur-militaer_anhoerung,ch.sem.sachplan-asyl_anhoerung,ch.astra.sachplan-infrastruktur-strasse_anhoerung,ch.bav.sachplan-infrastruktur-schiene_anhorung
 max_featureids_request = 20
+default_cache_control = ${default_cache_control}
 
 # Use the BOD directly, no .po./mo files
 dynamic_translation = ${dynamic_translation}
