BGDIINF_SB-2517: Increased CI test verbosity
This allow to know which test is skipped.

Also make correct use of the S3_TESTS environment variable for the CI to be
consistent with the local environment.

--- a/.env.ci
+++ b/.env.ci
@@ -17,3 +17,4 @@ SPHINXHOST=sys-api3.dev.bgdi.ch
 VECTOR_BUCKET=service-mf-chsdi3-grid-geojsons-dev-swisstopo
 WMSHOST=sys-wms.dev.bgdi.ch
 WMTS_PUBLIC_HOST=sys-wmts.dev.bgdi.ch
+S3_TESTS=0
