--- a/Makefile.frankfurt
+++ b/Makefile.frankfurt
@@ -302,18 +302,20 @@ dockerpull:
 .PHONY: test
 test: $(VENV) config-templates $(TRANSLATION_FILES) $(DOC_BUILD)
 	export $(shell cat $(ENV_FILE)) && ${PYTHON} ./scripts/pg_ready.py
-	PYTHONPATH=${PYTHONPATH} S3_TESTS=$(S3_TESTS) ${NOSE} --verbosity=2  --cover-erase  tests/ -e "(.*e2e.*|test_search|test_sphinxapi)"
+	PYTHONPATH=${PYTHONPATH} S3_TESTS=$(S3_TESTS) ${NOSE} --verbosity=2 --cover-erase  tests/ -e "(.*e2e.*|test_search|test_sphinxapi)"
 
 
 .PHONY: unittest-ci
 unittest-ci: $(VENV) config-templates $(TRANSLATION_FILES) $(DOC_BUILD)
 	mkdir -p junit-reports/{integration,functional}
-	PYTHONPATH=${PYTHONPATH} ${NOSE} --with-xunit --xunit-file=junit-reports/functional/nosetest.xml \
+	PYTHONPATH=${PYTHONPATH} ${NOSE} --verbosity=2 \
+		--with-xunit --xunit-file=junit-reports/functional/nosetest.xml \
 		tests/functional
 # FIXME here below we ignore the test_wmtscapabitlities, test_search and test_sphinxapi because
 # they are not passing in Frankfurt environment and they will anyway be removed from mf-chsdi3
 # after the migration.
-	PYTHONPATH=${PYTHONPATH} S3_TESTS=0 ${NOSE} --with-xunit --xunit-file=junit-reports/integration/nosetest.xml \
+	PYTHONPATH=${PYTHONPATH} S3_TESTS=$(S3_TESTS) ${NOSE} --verbosity=2 \
+		--with-xunit --xunit-file=junit-reports/integration/nosetest.xml \
 		tests/integration \
 		-e "(test_search|test_sphinxapi)"
 
