--- a/.env.default
+++ b/.env.default
@@ -8,7 +8,7 @@ PY_SQLALCHEMY_LOG_LEVEL=INFO
 API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
 CACHE_CONTROL=no-cache
-DATAGEOADMINHOST=sys-data.dev.bgdi.ch
+DATAGEOADMINHOST=https://data.geo.admin.ch
 DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
 DBSTAGING=dev
