--- a/.env.default
+++ b/.env.default
@@ -8,7 +8,8 @@ PY_SQLALCHEMY_LOG_LEVEL=INFO
 API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
 CACHE_CONTROL=no-cache
-DATAGEOADMINHOST=sys-data.dev.bgdi.ch
+DATAGEOADMINHOST=data.geo.admin.ch
+DATAGEOADMINHOST_PROTOCOL=https
 DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
 DBSTAGING=dev
