--- a/production.ini.in
+++ b/production.ini.in
@@ -56,6 +56,7 @@ http_proxy = ${http_proxy}
 loader_js_bucket_host = ${loader_js_bucket_host}
 vector_bucket = ${vector_bucket}
 datageoadminhost = ${datageoadminhost}
+datageoadminhost_protocol = ${datageoadminhost_protocol}
 opentrans_api_key = ${opentrans_api_key}
 empty_geotables = ch.bav.sachplan-infrastruktur-schifffahrt_anhoerung,ch.bfe.sachplan-uebertragungsleitungen_anhoerung,ch.blw.emapis-bewaesserung,ch.blw.emapis-elektrizitaetsversorgung,ch.blw.emapis-milchleitung,ch.blw.emapis-seilbahnen,ch.vbs.sachplan-infrastruktur-militaer_anhoerung,ch.sem.sachplan-asyl_anhoerung,ch.astra.sachplan-infrastruktur-strasse_anhoerung,ch.bav.sachplan-infrastruktur-schiene_anhorung
 max_featureids_request = 20
