--- a/base.ini.in
+++ b/base.ini.in
@@ -54,6 +54,7 @@ kml_temp_dir = ${KML_TEMP_DIR}
 loader_js_bucket_host = ${LOADER_JS_BUCKET_HOST}
 vector_bucket = ${VECTOR_BUCKET}
 datageoadminhost = ${DATAGEOADMINHOST}
+datageoadminhost_protocol = ${DATAGEOADMINHOST_PROTOCOL}
 opentrans_api_key = ${OPENTRANS_API_KEY}
 empty_geotables = ch.bav.sachplan-infrastruktur-schifffahrt_anhoerung,ch.bfe.sachplan-uebertragungsleitungen_anhoerung,ch.blw.emapis-bewaesserung,ch.blw.emapis-elektrizitaetsversorgung,ch.blw.emapis-milchleitung,ch.blw.emapis-seilbahnen,ch.vbs.sachplan-infrastruktur-militaer_anhoerung,ch.sem.sachplan-asyl_anhoerung,ch.astra.sachplan-infrastruktur-strasse_anhoerung,ch.bav.sachplan-infrastruktur-schiene_anhorung
 max_featureids_request = 20
