BGDIINF_SB-2542: added config option SEARCH_BASE_URL
As service search now is an external service, a config option for the search base url has been added,
so that in viewer mako the ambiguous host variable does not need to be used for that.

--- a/.env.default
+++ b/.env.default
@@ -24,6 +24,7 @@ MODWSGI_CONFIG=development.ini
 MODWSGI_USER=www-data
 LOADER_JS_BUCKET_HOST=sys-api3.dev.bgdi.ch
 ROBOTS_FILE=robots_prod.txt
+SEARCH_BASE_URL=https://sys-api3.dev.bgdi.ch
 SERVER_PORT=6543
 SPHINXHOST=sys-api3.dev.bgdi.ch
 VECTOR_BUCKET=service-mf-chsdi3-grid-geojsons-dev-swisstopo
