--- a/.env.ci
+++ b/.env.ci
@@ -12,6 +12,7 @@ HOST=sys-api3.dev.bgdi.ch
 KML_TEMP_DIR=/var/local/print/kml
 LINKEDDATAHOST=https://geo.ld.admin.ch
 LOADER_JS_BUCKET_HOST=sys-api3.dev.bgdi.ch
+SEARCH_BASE_URL=https://sys-api3.dev.bgdi.ch
 SERVER_PORT=6543
 SPHINXHOST=sys-api3.dev.bgdi.ch
 VECTOR_BUCKET=service-mf-chsdi3-grid-geojsons-dev-swisstopo
