https://jira.swisstopo.ch/browse/BGDIINF_SB-2506
Adapting The Dockerfile and Makefile to use pipenv instead of venv.

removing old requirement file for python 3

moving the pipenv cleaning part to another target, as pipenv --rm crash if pipenv has not been set within codebuild

Reverting some changes, as the goal is to have minimal impact on the
project and how it works.

adding the line which makes the setup for the chsdi project

timestamps are not used yet

We can't remove requirements-py3.txt yet.
Added dev packages category in Pipfile
Correction to the makefile to also install dev packages and use the
setup script when serving

a comment to remember why the file is still here

removing some verbosity during installation

The setup.py script called by pipenv install -e no longer require the
'requirements-py3.txt' file. Instead, it generates a requirements file
on the fly (if it doesn't exist already) to feed the setup function.

This new file is cleaned up by the makefile target "clean" and is
part of the gitignore.

removing print statement

adding chsdi distribution in the buildspec to allow tests to run

installation in build

avoid git dirty error with setup script

generating requirement file from pipfile

removing requirements file from ignore file, as they are no longer generated

using both standard and dev dependencies in setup.py

seems like there is a problem between my local git history and the remote, trying to correct this

using a non deprecated method for requirements creation

removing unused package from imports

removing the dev packages (which don't exist) to see if this solves the memory issue

removing requirements from setup, as the system should already be installed at this point

using env file to store env variables meant to stop pipenv verbosity

By adding this package, the Pipfile (and lock) no longer gets modified by the
installation of the chsdi package.

removing useless install

removed useless install command

we moved the editab

--- a/.env.ci
+++ b/.env.ci
@@ -19,3 +19,5 @@ VECTOR_BUCKET=service-mf-chsdi3-grid-geojsons-dev-swisstopo
 WMSHOST=sys-wms.dev.bgdi.ch
 WMTS_PUBLIC_HOST=sys-wmts.dev.bgdi.ch
 S3_TESTS=0
+CI=1
+PIPENV_NOSPIN=True
