--- a/.env.default
+++ b/.env.default
@@ -22,7 +22,7 @@ KML_TEMP_DIR=/var/local/print/kml
 LINKEDDATAHOST=https://geo.ld.admin.ch
 MODWSGI_CONFIG=development.ini
 MODWSGI_USER=www-data
-LOADER_JS_BUCKET_HOST=sys-api3.dev.bgdi.ch
+LOADER_JS_BUCKET_LOCALHOST=https://sys-api3.dev.bgdi.ch
 ROBOTS_FILE=robots_prod.txt
 SEARCH_BASE_URL=https://sys-api3.dev.bgdi.ch
 SERVER_PORT=6543
