--- a/chsdi/static/info.json.in
+++ b/chsdi/static/info.json.in
@@ -1,8 +1,9 @@
 {
-  "python":"${PYTHON_VERSION}",
-  "branch":"${GIT_BRANCH}",
-  "version": "${APP_VERSION}",
+  "python": "${PYTHON_VERSION}",
+  "branch": "${GIT_BRANCH}",
+  "tag": "${GIT_TAG}",
   "dirty": "${GIT_DIRTY}",
+  "version": "${APP_VERSION}",
   "last_commit_short": "${GIT_HASH_SHORT}",
   "last_commit_hash": "${GIT_HASH}",
   "last_commit_date": "${GIT_COMMIT_DATE}",
