--- a/Pipfile
+++ b/Pipfile
@@ -68,6 +68,7 @@ WebTest = "==2.0.33"
 "zope.deprecation" = "==4.4.0"
 "zope.interface" = "==4.6.0"
 unidecode = "==1.1.1"
+Akhet = "==2.0"
 
 [dev-packages]
 
