--- a/pyramid-config/base.ini.in
+++ b/pyramid-config/base.ini.in
@@ -57,6 +57,7 @@ opentrans_api_key = ${OPENTRANS_API_KEY}
 empty_geotables = ch.bav.sachplan-infrastruktur-schifffahrt_anhoerung,ch.bfe.sachplan-uebertragungsleitungen_anhoerung,ch.blw.emapis-bewaesserung,ch.blw.emapis-elektrizitaetsversorgung,ch.blw.emapis-milchleitung,ch.blw.emapis-seilbahnen,ch.vbs.sachplan-infrastruktur-militaer_anhoerung,ch.sem.sachplan-asyl_anhoerung,ch.astra.sachplan-infrastruktur-strasse_anhoerung,ch.bav.sachplan-infrastruktur-schiene_anhorung
 max_featureids_request = 20
 default_cache_control = ${CACHE_CONTROL}
+robots_file = ${ROBOTS_FILE}
 
 # Use the BOD directly, no .po./mo files
 dynamic_translation = ${DYNAMIC_TRANSLATION}
