--- a/.env.ci
+++ b/.env.ci
@@ -1,5 +1,3 @@
-APACHE_BASE_PATH=main
-APACHE_ENTRY_PATH=
 PY_ROOT_LOG_LEVEL=DEBUG
 PY_CHSDI_LOG_LEVEL=DEBUG
 PY_SQLALCHEMY_LOG_LEVEL=WARN
@@ -12,8 +10,8 @@ GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
 HOST=sys-api3.dev.bgdi.ch
 LINKEDDATAHOST=https://geo.ld.admin.ch
 LOADER_JS_BUCKET_LOCALHOST=https://sys-api3.dev.bgdi.ch
+ROBOTS_FILE=robots_prod.txt
 SEARCH_BASE_URL=https://sys-api3.dev.bgdi.ch
-SERVER_PORT=6543
 SPHINXHOST=sys-api3.dev.bgdi.ch
 VECTOR_BUCKET=service-mf-chsdi3-grid-geojsons-dev-swisstopo
 WMSHOST=sys-wms.dev.bgdi.ch
@@ -21,4 +19,6 @@ WMTS_PUBLIC_HOST=sys-wmts.dev.bgdi.ch
 S3_TESTS=0
 CI=1
 PIPENV_NOSPIN=True
-ROBOTS_FILE=robots_prod.txt
+WSGI_TIMEOUT=30
+WSGI_WORKERS=1
+HTTP_PORT=8009
