--- a/Pipfile
+++ b/Pipfile
@@ -69,6 +69,8 @@ WebTest = "==2.0.33"
 "zope.interface" = "==4.6.0"
 unidecode = "==1.1.1"
 Akhet = "==2.0"
+gunicorn = "==20.1.0"
+gevent = "==21.12.0"
 
 [dev-packages]
 
