--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-boto3 = "==1.12.1"
-botocore = "==1.15.1"
+boto3 = "==1.24.77"
 flake8 = "==3.7.8"
 pep8 = "==1.7.1"
 pyflakes = "==2.1.1"
@@ -70,7 +69,7 @@ WebTest = "==2.0.33"
 unidecode = "==1.1.1"
 Akhet = "==2.0"
 gunicorn = "==20.1.0"
-gevent = "==21.12.0"
+eventlet = "==0.30.2"
 
 [dev-packages]
 
