BGDIINF_SB-2486: Made the static cache control separately configurable
Now the max-age of static asset can be separately configured via STATIC_MAX_AGE
env variable, if the variable is not set, then use the global CACHE_CONTROL

--- a/.env.default
+++ b/.env.default
@@ -8,6 +8,7 @@ PY_SQLALCHEMY_LOG_LEVEL=INFO
 API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
 CACHE_CONTROL=no-cache
+STATIC_MAX_AGE=3
 DATAGEOADMINHOST=sys-data.dev.bgdi.ch
 DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
