--- a/.env.ci
+++ b/.env.ci
@@ -5,6 +5,7 @@ PY_CHSDI_LOG_LEVEL=DEBUG
 PY_SQLALCHEMY_LOG_LEVEL=WARN
 API_URL=//sys-api3.dev.bgdi.ch
 CACHE_CONTROL="max-age=10,public"
+STATIC_MAX_AGE=100
 DATAGEOADMINHOST=sys-data.dev.bgdi.ch
 DYNAMIC_TRANSLATION=1
 GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
