--- a/Pipfile
+++ b/Pipfile
@@ -6,15 +6,7 @@ name = "pypi"
 [packages]
 boto3 = "==1.12.1"
 botocore = "==1.15.1"
-flake8 = "==3.7.8"
-pep8 = "==1.7.1"
-pyflakes = "==2.1.1"
-pycodestyle = "==2.5.0"
-autopep8 = "==1.4.4"
-Babel = "==2.7.0"
-beautifulsoup4 = "==4.8.0"
 cachetools = "==3.1.1"
-coverage = "==4.5.4"
 decorator = "==4.4.0"
 docutils = "==0.15.2"
 esrijson = "==0.4.3"
@@ -30,9 +22,7 @@ Mako = "==1.1.0"
 MarkupSafe = "==1.1.1"
 mccabe = "==0.6.1"
 networkx = "==2.2"
-nose = "==1.3.7"
 papyrus = "==2.4"
-pip = "==21.2.4"
 numpy = "==1.16.5"
 PasteDeploy = "==2.0.1"
 Pillow = "==8.3.2"
@@ -44,7 +34,6 @@ pyramid = "==1.10.4"
 pyramid-debugtoolbar = "==4.5"
 pyramid-mako = "==1.1.0"
 pyramid-tm = "==2.3"
-PyRSS2Gen = "==1.1"
 python-dateutil = "==2.8.0"
 pytz = "==2019.2"
 PyYAML = "==5.4.1"
@@ -54,23 +43,34 @@ requests = "==2.22.0"
 Shapely = "==1.6.4.post2"
 simplejson = "==3.16.0"
 six = "==1.16.0"
-Sphinx = "==1.8.5"
-sphinx-rtd-theme = "==0.4.3"
 SQLAlchemy = "==1.3.24"
 toml = "==0.10.0"
 transaction = "==2.4.0"
 translationstring = "==1.3"
-unittest-xml-reporting = "==2.5.2"
 venusian = "==1.2.0"
 waitress = "==1.4.3"
 WebOb = "==1.8.5"
-WebTest = "==2.0.33"
 "zope.deprecation" = "==4.4.0"
 "zope.interface" = "==4.6.0"
 unidecode = "==1.1.1"
 Akhet = "==2.0"
+pip = "*"
 
 [dev-packages]
+PyRSS2Gen = "==1.1"
+flake8 = "==3.7.8"
+pep8 = "==1.7.1"
+pyflakes = "==2.1.1"
+pycodestyle = "==2.5.0"
+autopep8 = "==1.4.4"
+Babel = "==2.7.0"
+beautifulsoup4 = "==4.8.0"
+WebTest = "==2.0.33"
+unittest-xml-reporting = "==2.5.2"
+Sphinx = "==1.8.5"
+sphinx-rtd-theme = "==0.4.3"
+nose = "==1.3.7"
+coverage = "==4.5.4"
 
 [requires]
 python_version = "3.7"
