BGDIINF_SB-2497: use nose2 instead of nosetests
* added -depth option to find command in clean target, to prevent the file or directory not
  found error message, which would be thrown otherwise. This again would lead the following
  commands to not being executed when running the cleanall target, which invokes the clean
  target first. So the pipenv would not be deleted correctly.

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ gatilegrid = "~=0.2"
 geojson = "~=2.5"
 lark_parser = "~=0.7.8"
 networkx = "~=2.8"
+nose2 = "*"
 papyrus = "~=2.4"
 Pillow = "~=9.2"
 polib = "~=1.1"
