--- a/Pipfile
+++ b/Pipfile
@@ -4,73 +4,51 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-boto3 = "==1.12.1"
-botocore = "==1.15.1"
-cachetools = "==3.1.1"
-decorator = "==4.4.0"
-docutils = "==0.15.2"
-esrijson = "==0.4.3"
-future = "==0.17.1"
-gatilegrid = "==0.1.19"
-GeoAlchemy2 = "==0.6.3"
-geojson = "==2.5.0"
-hupper = "==1.8.1"
-Jinja2 = "==2.11.3"
-lark_parser = "==0.7.7"
-lxml = "==4.6.3"
-Mako = "==1.1.0"
-MarkupSafe = "==1.1.1"
-mccabe = "==0.6.1"
-networkx = "==2.2"
-papyrus = "==2.4"
-numpy = "==1.16.5"
-PasteDeploy = "==2.0.1"
-Pillow = "==8.3.2"
-polib = "==1.1.0"
-psycopg2-binary = "==2.8.3"
-Pygments = "==2.7.4"
-pyproj = "==1.9.6"
-pyramid = "==1.10.4"
-pyramid-debugtoolbar = "==4.5"
-pyramid-mako = "==1.1.0"
-pyramid-tm = "==2.3"
-python-dateutil = "==2.8.0"
-pytz = "==2019.2"
-PyYAML = "==5.4.1"
-regex = "==2019.8.19"
-"repoze.lru" = "==0.7"
-requests = "==2.22.0"
-Shapely = "==1.6.4.post2"
-simplejson = "==3.16.0"
-six = "==1.16.0"
-SQLAlchemy = "==1.3.24"
-toml = "==0.10.0"
-transaction = "==2.4.0"
-translationstring = "==1.3"
-venusian = "==1.2.0"
-waitress = "==1.4.3"
-WebOb = "==1.8.5"
-"zope.deprecation" = "==4.4.0"
-"zope.interface" = "==4.6.0"
-unidecode = "==1.1.1"
-Akhet = "==2.0"
-pip = "*"
+boto3 = "~=1.24"
+cachetools = "~=5.2"
+decorator = "~=5.1"
+esrijson = "~=0.4"
+gatilegrid = "~=0.2"
+geojson = "~=2.5"
+lark_parser = "~=0.7.8"
+networkx = "~=2.8"
+papyrus = "~=2.4"
+Pillow = "~=9.2"
+polib = "~=1.1"
+psycopg2-binary = "~=2.9"
+pyproj = "~=3.4"
+pyramid = "~=2.0"
+pyramid-mako = "~=1.1"
+pyramid-tm = "~=2.5"
+pyramid-debugtoolbar = "~=4.9"
+python-dateutil = "~=2.8"
+pytz = "~=2022.4"
+PyYAML = "~=6.0"
+regex = "~=2022.9.13"
+requests = "~=2.28"
+Shapely = "~=1.8"
+simplejson = "~=3.17"
+six = "~=1.16.0"
+unidecode = "~=1.3"
+Akhet = "~=2.0"
 
 [dev-packages]
-PyRSS2Gen = "==1.1"
-flake8 = "==3.7.8"
-pep8 = "==1.7.1"
-pyflakes = "==2.1.1"
-pycodestyle = "==2.5.0"
-autopep8 = "==1.4.4"
-Babel = "==2.7.0"
-beautifulsoup4 = "==4.8.0"
-WebTest = "==2.0.33"
-unittest-xml-reporting = "==2.5.2"
-Sphinx = "==1.8.5"
-sphinx-rtd-theme = "==0.4.3"
-nose = "==1.3.7"
-coverage = "==4.5.4"
+waitress = "~=2.1"
+PyRSS2Gen = "~=1.1"
+flake8 = "*"
+pep8 = "*"
+pyflakes = "*"
+pycodestyle = "*"
+autopep8 = "*"
+Babel = "~=2.10"
+beautifulsoup4 = "~=4.11"
+WebTest = "~=3.0"
+unittest-xml-reporting = "~=3.2"
+Sphinx = "~=5.2"
+sphinx-rtd-theme = "~=1.0"
+nose = "~=1.3"
+coverage = "~=4.5"
+numpy = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.9"
