--- a/apache/wsgi-py3.conf.in
+++ b/apache/wsgi-py3.conf.in
@@ -35,35 +35,24 @@ RewriteRule ^${APACHE_ENTRY_PATH}/configs/services\.json ${APACHE_ENTRY_PATH}/re
 
 ############  WSGI #################################3
 
-# LoadModule wsgi_module modules/mod_wsgi.so
+${LOAD_WSGI_MODULE_DIRECTIVE}
 
-#don't forget this line
-# WSGISocketPrefix /var/run/wsgi
-
-WSGIApplicationGroup %{GLOBAL}
 WSGIPassAuthorization On
 
-WSGIDaemonProcess mf-chsdi3:${APACHE_BASE_PATH} display-name=%{GROUP} user=${MODWSGI_USER} processes=${WSGI_PROCESSES} threads=${WSGI_THREADS} \
-   python-home=${INSTALL_DIR}/.venv
+WSGIDaemonProcess mf-chsdi3:${APACHE_BASE_PATH} \
+                  display-name=%{GROUP} \
+                  user=${MODWSGI_USER} \
+                  processes=${WSGI_PROCESSES} \
+                  threads=${WSGI_THREADS} \
+                  python-home=${INSTALL_DIR}/.venv
 
+WSGIProcessGroup mf-chsdi3:${APACHE_BASE_PATH}
+WSGIApplicationGroup %{GLOBAL}
 
 # define the path to the WSGI app
 WSGIScriptAliasMatch ^${APACHE_ENTRY_PATH}/ ${INSTALL_DIR}/apache/application.wsgi
 
-<Directory ${INSTALL_DIR}/>
-      WSGIProcessGroup mf-chsdi3:${APACHE_BASE_PATH}
-    WSGIApplicationGroup %{GLOBAL}
+<Directory ${INSTALL_DIR}>
   Order allow,deny
   Allow from all
 </Directory>
-
-# assign the WSGI app instance the process group defined aboven, we put the WSGI
-# app instance in the global application group so it is always executed within
-# the main interpreter
-<Directory ${INSTALL_DIR}/apache>
-    Order allow,deny
-    Allow from all
-    WSGIProcessGroup mf-chsdi3:${APACHE_BASE_PATH}
-    WSGIApplicationGroup %{GLOBAL}
-</Directory>
-
