BGDIINF_SB-2631: Added support for JSON logs
Note it is recommended to use APACHE_LOG_LEVEL to warning to avoid non json
message from the mod_wsgi. The mod_wsgi will still log message in a non
json format, but with the level to warning no message  should appear unless
unexpected behavior.

--- a/Pipfile
+++ b/Pipfile
@@ -30,6 +30,7 @@ Shapely = "~=1.8"
 simplejson = "~=3.17"
 unidecode = "~=1.3"
 Akhet = "~=2.0"
+logging-utilities = "~=3.0.0"
 
 [dev-packages]
 waitress = "~=2.1"
