--- a/.env.ci
+++ b/.env.ci
@@ -1,6 +1,3 @@
-PY_ROOT_LOG_LEVEL=DEBUG
-PY_CHSDI_LOG_LEVEL=DEBUG
-PY_SQLALCHEMY_LOG_LEVEL=WARN
 API_URL=//sys-api3.dev.bgdi.ch
 CACHE_CONTROL="max-age=10,public"
 STATIC_MAX_AGE=100
@@ -20,3 +17,4 @@ WMTS_PUBLIC_HOST=sys-wmts.dev.bgdi.ch
 S3_TESTS=0
 CI=1
 PIPENV_NOSPIN=True
+LOGS_DIR=./logs
