--- a/.env.default
+++ b/.env.default
@@ -1,8 +1,5 @@
-APACHE_LOG_LEVEL=debug
+APACHE_LOG_LEVEL=error
 HTTP_PORT=8009
-PY_ROOT_LOG_LEVEL=DEBUG
-PY_CHSDI_LOG_LEVEL=DEBUG
-PY_SQLALCHEMY_LOG_LEVEL=INFO
 API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
 CACHE_CONTROL=no-cache
@@ -27,3 +24,4 @@ WMSHOST=sys-wms.dev.bgdi.ch
 WMTS_PUBLIC_HOST=sys-wmts.dev.bgdi.ch
 WSGI_PROCESSES=1
 WSGI_THREADS=2
+LOGS_DIR=./logs
