--- a/apache/application.wsgi.in
+++ b/apache/application.wsgi.in
@@ -1,8 +1,7 @@
 #!/usr/bin/env python
 
+from pyramid.paster import get_app
 
-from pyramid.paster import get_app, setup_logging
 
 ini_path = "${INSTALL_DIR}/${MODWSGI_CONFIG}" #use a full path cause it will be runned from apache directory
-setup_logging(ini_path)
 application = get_app(ini_path, 'main')
