--- a/chsdi/config/base.ini.in
+++ b/chsdi/config/base.ini.in
@@ -17,6 +17,8 @@ pyramid.debug_routematch = false
 pyramid.prevent_http_cache = false
 pyramid.default_locale_name = de
 pyramid.includes = pyramid_tm
+pyramid.tweens = chsdi.logging_tweens.logging_context_tween
+                 pyramid.tweens.excview_tween_factory
 
 # SQLAlchemy database URL
 sqlalchemy.are.url = postgresql://${DBHOST}:${DBPORT}/are_${DBSTAGING}
