--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -35,7 +35,7 @@ phases:
       - echo "Installing kubectl"
       - curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.22.6/2022-03-09/bin/linux/amd64/kubectl
       - chmod +x ./kubectl
-      - mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
+      - mkdir -p $HOME/bin && mv ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
       - kubectl version --short --client
       - echo "Configure AWS profile swisstopo-bgdi-dev"
       - sts=$(aws sts assume-role --role-arn "arn:aws:iam::839910802816:role/kubernetes-codebuild-dev" --role-session-name "swisstopo-bgdi-dev")
@@ -56,7 +56,7 @@ phases:
           # NOTE: For manual build trigger, CODEBUILD_WEBHOOK_HEAD_REF is not set therefore get
           # the branch name from git command. This is a bit hacky but did not find any other solution
           echo CODEBUILD_RESOLVED_SOURCE_VERSION=${CODEBUILD_RESOLVED_SOURCE_VERSION}
-          export GIT_BRANCH=$(git describe --all | awk '{gsub("remotes/origin/|origin/|heads/|refs/heads/", ""); print $1}')
+          export GIT_BRANCH=$(git show-ref --heads | grep $(git --no-pager show --format=%H) | head -1 | awk '{gsub("refs/heads/", ""); print $2}')
         fi
       - export GIT_BASE_BRANCH="${CODEBUILD_WEBHOOK_BASE_REF#refs/heads/}"
       - export GIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
