Do not log access log to other_vhosts_access.log
If you don't set `CostomLog` in your vhost config, by default access log are
logged into other_vhosts_access.log file.

Also set the global `ErrorLog` to stdout in order to have the apache starting
logs in stdout instead of error.log file.

--- a/apache/25-mf-chsdi3.conf.in
+++ b/apache/25-mf-chsdi3.conf.in
@@ -3,6 +3,9 @@
 # Managed by Puppet
 # ************************************
 
+# Print the server starting logs to /dev/stdout
+ErrorLog /dev/stdout
+
 <VirtualHost *:${HTTP_PORT}>
   # ServerName mf-chsdi3
 
@@ -33,6 +36,7 @@
   ErrorLogFormat "${APACHE_LOG_FMT}"
   ErrorLog /dev/stdout
   LogLevel ${APACHE_LOG_LEVEL}
+  CustomLog /dev/null common
   ServerSignature Off
 
 
