BGDIINF_SB-2497: changed directory of test reports
Test reports are now written to junit-reports/ and subfolders therein.
This way we stay compatible with the ci tests and the buildspec-py3.yml
reportGroup configuration

--- a/tests/nose2_tests_e2e.cfg
+++ b/tests/nose2_tests_e2e.cfg
@@ -12,7 +12,7 @@ descriptions = True
 
 [junit-xml]
 always-on = True
-path = ./tests/reports/nose2-e2e.xml
+path = junit-reports/e2e/nosetest.xml
 test_fullname = True
 
 [log-capture]
