--- a/tests/nose2_tests_functional.cfg
+++ b/tests/nose2_tests_functional.cfg
@@ -12,7 +12,7 @@ descriptions = True
 
 [junit-xml]
 always-on = True
-path = ./tests/reports/nose2-functional.xml
+path = junit-reports/functional/nosetest.xml
 test_fullname = True
 
 [log-capture]
