--- a/tests/nose2_tests_integration.cfg
+++ b/tests/nose2_tests_integration.cfg
@@ -12,7 +12,7 @@ descriptions = True
 
 [junit-xml]
 always-on = True
-path = ./tests/reports/nose2-integration.xml
+path = junit-reports/integration/nosetest.xml
 test_fullname = True
 
 [log-capture]
