BGDIINF_SB-2497: added coverage configuration to nose2.cfg
Now coverage reporting is configured in nose2.cfg and the old block for
nosetests has been deleted from setup.cfg.

--- a/tests/nose2.cfg
+++ b/tests/nose2.cfg
@@ -18,3 +18,10 @@ log-level = DEBUG
 
 [multiprocess]
 always-on = True
+test-run-timeout = 600
+
+[coverage]
+always-on = True
+coverage-report = term \
+                  xml
+cover-package = chsdi
