BGDIINF_SB-2497: renamed NUM_PROC to PROCESS for consitency with infra-e2e-test repo

--- a/.env.default
+++ b/.env.default
@@ -16,7 +16,7 @@ GEODATA_STAGING=test
 HOST=sys-api3.dev.bgdi.ch
 LINKEDDATAHOST=https://geo.ld.admin.ch
 MODWSGI_CONFIG=development.ini
-NUM_PROC=0
+PROCESS=0
 LOADER_JS_BUCKET_LOCALHOST=https://sys-api3.dev.bgdi.ch
 ROBOTS_FILE=robots_dev.txt
 SEARCH_BASE_URL=https://sys-api3.dev.bgdi.ch
