BGDIINF_SB-2497: removed redundant cover-package from nose2.cfg | added coverage report groud to buildspec-py3.yml

--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -197,3 +197,7 @@ reports:
     files:
       - "junit-reports/**/*"
     file-format: JunitXml
+  reportGroupCoverage:
+    files:
+      - coverage.xml
+    file-format: COBERTURAXML
