BGDIINF_SB-2497: feedback ltshb | clean-up and simplifications | CodeBuild reporting
* Splitted up unit testing into two separate targets, one for integration and one for functional tests
* Having coverage reporting in terminal when local, and in CodeBuild report groups in CI
* Having missing lines of source code files reported in coverage report
* moved nose2 into dev-packages in requirements

--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -193,7 +193,15 @@ phases:
 
 
 reports:
-  reportGroupJunit:
+  tests:
     files:
       - "junit-reports/**/*"
     file-format: JunitXml
+  cov_func:
+    files:
+      - "coverage_functional.xml"
+    file-format: COBERTURAXML
+  cov_int:
+    files:
+      - "coverage_integration.xml"
+    file-format: COBERTURAXML
