BGDIINF_SB-2497: test Makefile target | buildspec
* re-introduced the test Makefile target, which runs both, the integration and the functional unit tests
* combining the coverage report xml files in buildspec-py3.yml into one report group

--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -197,11 +197,8 @@ reports:
     files:
       - "junit-reports/**/*"
     file-format: JunitXml
-  cov_func:
+  cover:
     files:
       - "coverage_functional.xml"
-    file-format: COBERTURAXML
-  cov_int:
-    files:
       - "coverage_integration.xml"
     file-format: COBERTURAXML
