Use Pipfile.lock on the CI
This avoid using other package version on the CI as local to avoid having
test working locally but failing on CI.

--- a/buildspec-py3.yml
+++ b/buildspec-py3.yml
@@ -134,7 +134,7 @@ phases:
       - python ./scripts/pg_ready.py
       - echo "host=$(hostname -I)"
       - echo "=========== PREPARE ==============="
-      - make setup
+      - make ci
       - echo "=========== LINTING ==============="
       - make lint
 
