--- a/Pipfile
+++ b/Pipfile
@@ -46,7 +46,7 @@ WebTest = "~=3.0"
 unittest-xml-reporting = "~=3.2"
 Sphinx = "~=5.2"
 sphinx-rtd-theme = "~=1.0"
-nose2 = "*"
+nose = "~=1.3"
 coverage = "~=4.5"
 numpy = "*"
 
