--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,12 @@
+[nosetests]
+match = ^test
+nocapture = 1
+cover-package = chsdi
+with-coverage = 1
+cover-erase = 1
+processes = -1
+process-timeout = 600
+
 [compile_catalog]
 directory = chsdi/locale
 domain = chsdi
