--- a/.env.ci
+++ b/.env.ci
@@ -2,6 +2,8 @@ API_URL=//sys-api3.dev.bgdi.ch
 CACHE_CONTROL="max-age=10,public"
 STATIC_MAX_AGE=100
 DATAGEOADMINHOST=https://data.geo.admin.ch
+AERIALIMAGES_DATA_HOST=https://aerialimages.geo.admin.ch
+HIST_MAPS_DATA_HOST=https://historicalmaps.geo.admin.ch
 DYNAMIC_TRANSLATION=1
 GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
 HOST=sys-api3.dev.bgdi.ch
