--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ geojson = "~=2.5"
 lark_parser = "~=0.7.8"
 networkx = "~=2.8"
 papyrus = "~=2.4"
+SQLAlchemy = "~=1.4"
 Pillow = "~=9.2"
 polib = "~=1.1"
 psycopg2-binary = "~=2.9"
