BGDIINF_SB-2950: by default pyramid did not catch all exception and log them
By default pyramid did not logged the exception, they were simply printed on the
console. Except when running locally with waitress server which logged the exception
using the logging configuration.

This made the debugging of crash on PROD harder as we needed to look into the
non json index in kibana and that each backtrace line was treated as a separate
log.

Now with the pyramid_exclog package exception are logged based on the logging
configuration and the exc_info flag is set to true and the backtrace is set
into the field exc_text. This will help to debug crash with kibana.

--- a/chsdi/config/base.ini.in
+++ b/chsdi/config/base.ini.in
@@ -18,6 +18,7 @@ pyramid.prevent_http_cache = false
 pyramid.default_locale_name = de
 pyramid.includes = pyramid_tm
 pyramid.tweens = chsdi.logging_tweens.logging_context_tween
+                 pyramid_exclog.exclog_tween_factory
                  pyramid.tweens.excview_tween_factory
 
 # SQLAlchemy database URL
