--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,7 @@ simplejson = "~=3.17"
 unidecode = "~=1.3"
 Akhet = "~=2.0"
 logging-utilities = "~=3.1.1"
+pyramid-exclog = "~=1.1"
 
 [dev-packages]
 waitress = "~=2.1"
