PB-130: As announced, api3 is not accepting HTTP PUT, POST and DELETE anymore
- Accepting GET, HEAD, OPTIONS

- Returning empty string when OPTIONS is set

--- a/chsdi/config/base.ini.in
+++ b/chsdi/config/base.ini.in
@@ -9,6 +9,7 @@
 use = egg:chsdi
 app_version = ${APP_VERSION}
 available_languages = de fr it en rm
+request_method = GET, HEAD, OPTIONS
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
