BGDIDIC-1859: Treasurehunt is a pure geojson layer and the maxres has been adapted towards the new viewer

--- a/chsdi/static/vectorStyles/ch.swisstopo.treasurehunt.json
+++ b/chsdi/static/vectorStyles/ch.swisstopo.treasurehunt.json
@@ -5,7 +5,8 @@
     {
       "geomType": "point",
       "value": "",
-      "maxResolution": 1,
+      "minResolution": 0,
+      "maxResolution": 0.8,
       "vectorOptions": {
         "type": "icon",
         "src": "https://data.geo.admin.ch/ch.swisstopo.treasurehunt/2020_icon.png"
