PB-764 made polyfill url configurable via env

--- a/.env.default
+++ b/.env.default
@@ -29,3 +29,5 @@ WMTS_PUBLIC_HOST=sys-wmts.dev.bgdi.ch
 WSGI_PROCESSES=1
 WSGI_THREADS=2
 LOGS_DIR=./logs
+DISABLE_POLYFILL=false
+POLYFILL_URL="//cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?version=4.8.0&features=fetch,requestAnimationFrame,Element.prototype.classList,URL"
