--- a/.env.ci
+++ b/.env.ci
@@ -22,3 +22,5 @@ PIPENV_NOSPIN=True
 LOGS_DIR=./logs
 SQLALCHEMY_ISOLATION_LEVEL=AUTOCOMMIT
 SQLALCHEMY_POOL_PRE_PING=True
+DISABLE_POLYFILL=false
+POLYFILL_URL="//cdnjs.cloudflare.com/polyfill/v3/polyfill.min.js?version=4.8.0&features=fetch,requestAnimationFrame,Element.prototype.classList,URL"
