mf-geoadmin3.dev.bgdi.ch has been replaced with sys-map.dev.bgdi.ch

--- a/.env.ci
+++ b/.env.ci
@@ -5,7 +5,7 @@ DATAGEOADMINHOST=https://data.geo.admin.ch
 AERIALIMAGES_DATA_HOST=https://aerialimages.geo.admin.ch
 HIST_MAPS_DATA_HOST=https://historicalmaps.geo.admin.ch
 DYNAMIC_TRANSLATION=1
-GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
+GEOADMINHOST=sys-map.dev.bgdi.ch
 HOST=sys-api3.dev.bgdi.ch
 LINKEDDATAHOST=https://geo.ld.admin.ch
 MODWSGI_CONFIG=development.ini
