--- a/.env.default
+++ b/.env.default
@@ -13,7 +13,7 @@ DBPORT=5432
 DBSTAGING=dev
 DEBUG=True
 DYNAMIC_TRANSLATION=1
-GEOADMINHOST=mf-geoadmin3.dev.bgdi.ch
+GEOADMINHOST=sys-map.dev.bgdi.ch
 GEODATA_STAGING=test
 HOST=sys-api3.dev.bgdi.ch
 LINKEDDATAHOST=https://geo.ld.admin.ch
