--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,8 @@ decorator = "~=5.1"
 esrijson = "~=0.4"
 gatilegrid = "~=0.2"
 geojson = "~=2.5"
-lark_parser = "~=0.7.8"
+lark_parser = "==0.12.0"
+GeoAlchemy2 = "==0.13.0"
 networkx = "~=2.8"
 papyrus = "~=2.4"
 SQLAlchemy = "~=1.4"
@@ -30,7 +31,6 @@ requests = "~=2.28"
 Shapely = "~=1.8"
 simplejson = "~=3.17"
 unidecode = "~=1.3"
-Akhet = "~=2.0"
 logging-utilities = "~=3.1.1"
 pyramid-exclog = "~=1.1"
 
