--- a/Pipfile
+++ b/Pipfile
@@ -9,15 +9,15 @@ cachetools = "~=5.2"
 decorator = "~=5.1"
 esrijson = "~=0.4"
 gatilegrid = "~=0.2"
-geojson = "~=2.5"
+geojson = "~=3.0"
 lark_parser = "~=0.12.0"
 networkx = "~=2.8"
-papyrus = "~=2.4"
+papyrus = "==2.5"
 SQLAlchemy = "~=1.4"
 Pillow = "~=9.2"
 polib = "~=1.1"
 psycopg2-binary = "~=2.9"
-pyproj = "~=3.4"
+pyproj = "==3.6.1"
 pyramid = "~=2.0"
 pyramid-mako = "~=1.1"
 pyramid-tm = "~=2.5"
@@ -27,15 +27,16 @@ pytz = "~=2022.4"
 PyYAML = "~=6.0"
 regex = "~=2022.9.13"
 requests = "~=2.28"
-Shapely = "~=1.8"
+Shapely = "~=2.0"
+numpy = "==2.0.2"
 simplejson = "~=3.17"
 unidecode = "~=1.3"
-Akhet = "~=2.0"
 logging-utilities = "~=3.1.1"
 pyramid-exclog = "~=1.1"
+GeoAlchemy2 = "==0.13.3"
 
 [dev-packages]
-waitress = "~=2.1"
+waitress = "~=3.0"
 PyRSS2Gen = "~=1.1"
 flake8 = "*"
 pep8 = "*"
@@ -50,7 +51,8 @@ Sphinx = "~=5.2"
 sphinx-rtd-theme = "~=1.0"
 nose2 = "*"
 coverage = "~=4.5"
-numpy = "*"
+numpy = "==2.0.2"
+pyproj = "==3.6.1"
 
 [requires]
 python_version = "3.9"
