--- a/secrets.yml
+++ b/secrets.yml
@@ -1,3 +1,3 @@
-OPENTRANS_API_KEY: !var infra-gopass-bgdi/mf-chsdi3/OPENTRANS_API_KEY password
-PGUSER: !var infra-gopass-bgdi/mf-chsdi3/PG PGUSER
-PGPASSWORD: !var infra-gopass-bgdi/mf-chsdi3/PG PGPASSWORD
+PGUSER: !var /amazon-rds/geodata-master/www-data/user --profile swisstopo-bgdi
+PGPASSWORD: !var /amazon-rds/geodata-master/www-data/password --profile swisstopo-bgdi
+OPENTRANS_API_KEY: !var /opentransportdata.swiss/swisstopo/tokens/departure_board --profile swisstopo-bgdi
