BGDIDIC-1639: truncate layer ch.bav.sachplan-infrastruktur-schiene_ausgangslage
all the features of this layer will be temporarily dropped.

--- a/chsdi/config/base.ini.in
+++ b/chsdi/config/base.ini.in
@@ -61,7 +61,7 @@ datageoadminhost = ${DATAGEOADMINHOST}
 hist_maps_data_host = ${HIST_MAPS_DATA_HOST}
 opentrans_api_key = ${OPENTRANS_API_KEY}
 opentrans_url = ${OPENTRANS_URL}
-empty_geotables = ch.bav.sachplan-infrastruktur-schifffahrt_anhoerung,ch.bfe.sachplan-uebertragungsleitungen_anhoerung,ch.blw.emapis-bewaesserung,ch.blw.emapis-elektrizitaetsversorgung,ch.blw.emapis-milchleitung,ch.blw.emapis-seilbahnen,ch.vbs.sachplan-infrastruktur-militaer_anhoerung,ch.sem.sachplan-asyl_anhoerung,ch.astra.sachplan-infrastruktur-strasse_anhoerung,ch.bav.sachplan-infrastruktur-schiene_anhorung
+empty_geotables = ch.bav.sachplan-infrastruktur-schifffahrt_anhoerung,ch.bfe.sachplan-uebertragungsleitungen_anhoerung,ch.blw.emapis-bewaesserung,ch.blw.emapis-elektrizitaetsversorgung,ch.blw.emapis-milchleitung,ch.blw.emapis-seilbahnen,ch.vbs.sachplan-infrastruktur-militaer_anhoerung,ch.sem.sachplan-asyl_anhoerung,ch.astra.sachplan-infrastruktur-strasse_anhoerung,ch.bav.sachplan-infrastruktur-schiene_anhorung,ch.bav.sachplan-infrastruktur-schiene_ausgangslage
 max_featureids_request = 20
 default_cache_control = ${CACHE_CONTROL}
 static_max_age = ${STATIC_MAX_AGE}
