PB-1892: Update dev packages

--- a/Pipfile
+++ b/Pipfile
@@ -36,23 +36,22 @@ pyramid-exclog = "~=1.1"
 GeoAlchemy2 = "==0.13.3"
 
 [dev-packages]
-waitress = "~=3.0"
-PyRSS2Gen = "~=1.1"
+waitress = "*"
+PyRSS2Gen = "*"
 flake8 = "*"
 pep8 = "*"
 pyflakes = "*"
 pycodestyle = "*"
 autopep8 = "*"
-Babel = "~=2.10"
-beautifulsoup4 = "~=4.11"
-WebTest = "~=3.0"
-unittest-xml-reporting = "~=3.2"
+Babel = "*"
+beautifulsoup4 = "*"
+WebTest = "*"
+unittest-xml-reporting = "*"
 Sphinx = "~=5.2"
 sphinx-rtd-theme = "~=1.0"
 nose2 = "*"
-coverage = "~=4.5"
-numpy = "==2.0.2"
-requests-mock = "~=1.12.1"
+coverage = "*"
+requests-mock = "*"
 pylint = "*"
 
 [requires]
