--- a/Pipfile
+++ b/Pipfile
@@ -4,36 +4,36 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-boto3 = "~=1.24"
-cachetools = "~=5.2"  # 6
-decorator = "~=5.1"
+boto3 = "~=1.40"
+cachetools = "~=6.2"
+decorator = "~=5.2"
 esrijson = "~=0.4"
 gatilegrid = "~=0.2"
-geojson = "~=3.0"
-lark_parser = "~=0.12.0"
-networkx = "~=2.8"  # 3
-papyrus = "==2.5"
-SQLAlchemy = "~=1.4.48"  # 2
-Pillow = "~=9.2"  # 11
-polib = "~=1.1"
+geojson = "~=3.2"
+lark_parser = "~=0.12"
+networkx = "~=3.2"  # 3.5: 3.11; 3.4: 3.10;
+papyrus = "==2.5"  # >2.5 requires sqlalchemy>=2
+SQLAlchemy = "~=1.4"  # 2
+Pillow = "~=11.3"
+polib = "~=1.2"
 psycopg2-binary = "~=2.9"
-pyproj = "==3.6.1"
+pyproj = "~=3.6"  # 3.7: 3.10
 pyramid = "~=2.0"
 pyramid-mako = "~=1.1"
-pyramid-tm = "~=2.5"
-pyramid-debugtoolbar = "~=4.9"
-python-dateutil = "~=2.8"
-pytz = "~=2022.4"  # 2025, maybe unpin
+pyramid-tm = "~=2.6"
+pyramid-debugtoolbar = "~=4.12"
+python-dateutil = "~=2.9"
+pytz = "*"  # uses CalVer, not SemVer
 PyYAML = "~=6.0"
-regex = "~=2022.9.13"  # 2025, maybe unpin
-requests = "~=2.28"
-Shapely = "~=2.0"
-numpy = "==2.0.2"
-simplejson = "~=3.17"
-unidecode = "~=1.3"
-logging-utilities = "~=3.1.1"  # 5
+regex = "*"  # uses CalVer, not SemVer
+requests = "~=2.32"
+Shapely = "~=2.0"  # 2.1: 3.10
+numpy = "~=2.0"  # 2.3: 3.11; 2.2: 3.10
+simplejson = "~=3.20"
+unidecode = "~=1.4"
+logging-utilities = "~=5.1"
 pyramid-exclog = "~=1.1"
-GeoAlchemy2 = "==0.13.3"
+GeoAlchemy2 = "==0.13.3"  # 0.18
 
 [dev-packages]
 waitress = "*"
