PB-1929: featureattachaments - change DATAGEOADMINHOST

--- a/.env.ci
+++ b/.env.ci
@@ -1,7 +1,7 @@
 API_URL=//sys-api3.dev.bgdi.ch
 CACHE_CONTROL="max-age=10,public"
 STATIC_MAX_AGE=100
-DATAGEOADMINHOST=https://data.geo.admin.ch
+DATAGEOADMINHOST=https://api3.geo.admin.ch/featureattachments
 HIST_MAPS_DATA_HOST=https://historicalmaps.geo.admin.ch
 DYNAMIC_TRANSLATION=1
 GEOADMINHOST=sys-map.dev.bgdi.ch
