--- a/.env.default
+++ b/.env.default
@@ -5,7 +5,7 @@ API_URL=//sys-api3.dev.bgdi.ch
 AWS_DEFAULT_REGION=eu-central-1
 CACHE_CONTROL=no-cache
 STATIC_MAX_AGE=3
-DATAGEOADMINHOST=https://data.geo.admin.ch
+DATAGEOADMINHOST=https://api3.geo.admin.ch/featureattachments
 HIST_MAPS_DATA_HOST=https://historicalmaps.geo.admin.ch
 DBHOST=pg-geodata-replica.bgdi.ch
 DBPORT=5432
