--- a/Pipfile
+++ b/Pipfile
@@ -33,7 +33,7 @@ simplejson = "~=3.20"
 unidecode = "~=1.4"
 logging-utilities = "~=5.1"
 pyramid-exclog = "~=1.1"
-GeoAlchemy2 = "<0.18"  # tests are failing, not sure why
+GeoAlchemy2 = "~=0.18"
 setuptools = "<81"  # https://github.com/Pylons/pyramid/issues/3731
 
 [dev-packages]
